# ai-trip-optimiser-deal-hunter

./: README.md  pyproject.toml  trip-optimiser-deal-hunter.ipynb
root_agent/: __init__.py  agent.py  tools.py
root_agent/sub_agents/: __init__.py  activity_search_agent.py  flight_search_agent.py  hotel_search_agent.py  itinerary_builder_agent.py  preference_collector_agent.py  recommendation_system.py
